--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@ goal for the month and year</p>
       </div>
       <div class="col">
         <p>get the app fom</p>
-        <p class="bg-secondary text-white w-25 text-center"><i class="fa-brands fa-facebook"></i> </p>
-        <p class="bg-secondary text-white w-25 text-center"><i class="fa-solid fa-play"></i></p>
+        <p class="bg-secondary text-white w-25 text-center"><i class="fa-brands fa-facebook"></i> facebook</p>
+        <p class="bg-secondary text-white w-25 text-center"><i class="fa-solid fa-play"></i> play store</p>
       </div>
 </footer>
 <script src="https://kit.fontawesome.com/3fd66e39ee.js" crossorigin="anonymous"></script>
